<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dt.urbanswisata.fragments.DashboardFragment"
        android:label="fragment_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.dt.urbanswisata.fragments.ExploreFragment"
        android:label="@string/nav_2"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.dt.urbanswisata.fragments.NotificationFragment"
        android:label="@string/nav_3"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.dt.urbanswisata.fragments.AccountFragment"
        android:label="@string/nav_4"
        tools:layout="@layout/fragment_account" />

</navigation>