<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashLoginActivity">

    <ImageView
        android:id="@+id/imageview_onboard_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dt_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/horizontal_m"
        android:layout_marginVertical="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            style="@style/Theme.DT.Text.Onboard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_lead" />

        <TextView
            style="@style/Theme.DT.Text.Onboard2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/horizontal_sm"
            android:layout_weight="1"
            android:text="@string/onboard_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_with_google"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onboard_button"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>